// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker Swatch background color is props.color 1`] = `
.c1 {
  width: 36px;
  height: 14px;
  border-radius: 2px;
  background-color: #000;
  visibility: visible;
}

.c0 {
  border: none;
  padding: 5px;
  border-radius: 1px;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
  display: inline-block;
  cursor: pointer;
  background-color: #fff;
  background-image: none;
}

<button
  class="c0"
  type="button"
>
  <div
    class="c1"
    color="#000"
  />
</button>
`;

exports[`ColorPicker Swatch background color is props.color 2`] = `
.c1 {
  width: 36px;
  height: 14px;
  border-radius: 2px;
  background-color: #f00;
  visibility: visible;
}

.c0 {
  border: none;
  padding: 5px;
  border-radius: 1px;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
  display: inline-block;
  cursor: pointer;
  background-color: #fff;
  background-image: none;
}

<button
  class="c0"
  type="button"
>
  <div
    class="c1"
    color="#f00"
  />
</button>
`;

exports[`ColorPicker Swatch background color is props.color 3`] = `
.c1 {
  width: 36px;
  height: 14px;
  border-radius: 2px;
  background-color: #aaa;
  visibility: visible;
}

.c0 {
  border: none;
  padding: 5px;
  border-radius: 1px;
  box-shadow: 0 0 0 1px rgba(0,0,0,0.1);
  display: inline-block;
  cursor: pointer;
  background-color: #fff;
  background-image: none;
}

<button
  class="c0"
  type="button"
>
  <div
    class="c1"
    color="#aaa"
  />
</button>
`;
